--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@
 </div>
 
 <!-- Mais Scripts-->
-<script src="https://rockeydoggy.github.io/boss/js/fools.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/junin.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/steven.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/rafaslime.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/mandrax.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/girl.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/sbeeker.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/script.js"></script>
-<script src="https://rockeydoggy.github.io/boss/js/passyst.js"></script>
+<script src="https://novaordemmundial.github.io/js/fools.js"></script>
+<script src="https://novaordemmundial.github.io/js/junin.js"></script>
+<script src="https://novaordemmundial.github.io/js/steven.js"></script>
+<script src="https://novaordemmundial.github.io/js/rafaslime.js"></script>
+<script src="https://novaordemmundial.github.io/js/mandrax.js"></script>
+<script src="https://novaordemmundial.github.io/js/girl.js"></script>
+<script src="https://novaordemmundial.github.io/js/sbeeker.js"></script>
+<script src="https://novaordemmundial.github.io/js/script.js"></script>
+<script src="https://novaordemmundial.github.io/js/passyst.js"></script>
