--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-	<link rel="stylesheet" href="https://rockeydoggy.github.io/boss/css/style.css">
-  	<link rel="stylesheet" href="https://rockeydoggy.github.io/boss/css/Animations%20Of%20Style.css">
+	<link rel="stylesheet" href="https://novaordemmundial.github.io/css/style.css">
+  	<link rel="stylesheet" href="https://novaordemmundial.github.io/css/Animations%20Of%20Style.css">
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 	<title>Bosses</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
