--- a/index.html
+++ b/index.html
@@ -218,3 +218,5 @@
 <div id="testers">
   <input id="inTest" disabled value="">
 </div>
+
+<script src="https://novaordemmundial.github.io/js/menu.js"></script>
