--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
-	<link rel="stylesheet" href="css/design.css">
+	<title>Boss</title>
+	<link rel="stylesheet" src="">
 </head>
+
 <div class="centralizador">
   <div class="selecao">
     <p class="toJump tStart">
@@ -219,4 +221,7 @@
   <input id="inTest" disabled value="">
 </div>
 
-<script src="https://novaordemmundial.github.io/js/menu.js"></script>
+<div class="warningCentralize">
+  <div id="warningBox">
+  </div>
+</div>
