--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Boss</title>
-	<link rel="stylesheet" src="">
+	<link rel="stylesheet" href="css/design.css">
+	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
 <div class="centralizador">
@@ -225,3 +226,5 @@
   <div id="warningBox">
   </div>
 </div>
+
+<script src="/js/menu.js"></script>
