--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Boss</title>
-	<link rel="stylesheet" href="css/design.css">
+	<link rel="stylesheet" href="/css/design.css">
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
