--- a/fools.html
+++ b/fools.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/css/fools.css">
+  <link rel="stylesheet" href="css/fools.css">
   <title>Fools</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Este Boss Quer Foder!?">
