--- a/fools.html
+++ b/fools.html
@@ -2,7 +2,13 @@
   <title>Fools</title>
   <link rel="stylesheet" href="css/fools.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Este Boss Quer Foder!?">
+  <meta name="description" content="Este Boss esta Busca Foder!?">
+	<meta name="description" content="Conheça Fools, O Primeiro Boss">
+	<meta name="keywords" content="HTML5,CSS,JavaScript">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Fools" />
+	<meta property="og:image" content="https://i.imgur.com/SodIgwa.png" />
+	<meta property="og:url" content="https://novaordemmundial.github.io/fools">
 </head>
 
 <div class="centralizeCorpo">
