--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="HTML5,CSS,JavaScript">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Bosses" />
-	<meta property="og:image" content="https://i.imgur.com/SodIgwa.png" />
+	<meta property="og:image" content="https://i.imgur.com/gEqn6od.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/">
 </head>
 
