--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 	<link rel="stylesheet" href="/css/design.css">
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 	<meta name="author" content="RockeyDoggy">
-	<meta name="description" content="Conheça Os Bosses Da Live">
 	<meta name="keywords" content="HTML5,CSS,JavaScript">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.8">
+	<meta name="description" content="Conheça Os Bosses Da Live">
 	<meta property="og:title" content="Bosses" />
+	<meta property="og:description" content="Conheça Os Bosses Da Live" />
+	<meta property="og:site_name" content="Bosses" />
 	<meta property="og:image" content="https://i.imgur.com/gEqn6od.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/">
 </head>
