--- a/fools.html
+++ b/fools.html
@@ -5,8 +5,10 @@
   <meta name="description" content="Este Boss esta Busca Foder!?">
 	<meta name="description" content="Conheça Fools, O Primeiro Boss">
 	<meta name="keywords" content="HTML5,CSS,JavaScript">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=2.1">
 	<meta property="og:title" content="Fools" />
+	<meta property="og:description" content="Este Boss esta Busca Foder!?" />
+	<meta property="og:site_name" content="Fools" />
 	<meta property="og:image" content="https://i.imgur.com/SodIgwa.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/fools">
 </head>
