--- a/fools.html
+++ b/fools.html
@@ -9,7 +9,7 @@
 	<meta property="og:title" content="Fools" />
 	<meta property="og:description" content="Este Boss esta Busca Foder!?" />
 	<meta property="og:site_name" content="Fools" />
-	<meta property="og:image" content="https://i.imgur.com/SodIgwa.png" />
+	<meta property="og:image" content="https://i.imgur.com/YEQPVI1.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/fools">
 </head>
 
