--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Boss</title>
-  	<link rel="stylesheet" href="style/primary.css">
+  	<link rel="stylesheet" href="design/primary.css">
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 	<meta name="author" content="RockeyDoggy">
 	<meta name="keywords" content="HTML5,CSS,JavaScript">
