--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<meta property="og:site_name" content="Bosses" />
 	<meta property="og:image" content="https://i.imgur.com/gEqn6od.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/">
+	<script src=""></script>
+	<script src=""></script>
+	<script src=""></script>
 </head>
 
 <body>
