--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta property="og:site_name" content="Bosses" />
 	<meta property="og:image" content="https://i.imgur.com/gEqn6od.png" />
 	<meta property="og:url" content="https://novaordemmundial.github.io/">
-	<script src=""></script>
-	<script src=""></script>
+	<script src="watchers/bossInfos.js"></script>
+	<script src="watchers/bossStory.js"></script>
 	<script src=""></script>
 </head>
 
