--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:url" content="https://novaordemmundial.github.io/">
 	<script src="watchers/bossInfos.js"></script>
 	<script src="watchers/bossStory.js"></script>
-	<script src=""></script>
+	<script src="tags/constantesIniciais.js "></script>
 </head>
 
 <body>
