--- a/index.html
+++ b/index.html
@@ -111,4 +111,6 @@
 </body>
 
 <script src="/js/menu.js"></script>
-<script src="tags/constantesIniciais.js "></script>
+<script src="tags/constantesIniciais.js"></script>
+<script src="mechanics/bossKeys.js"></script>
+<script src="mechanics/statusRead.js"></script>
