--- a/index.html
+++ b/index.html
@@ -113,4 +113,4 @@
 <script src="/js/menu.js"></script>
 <script src="tags/constantesIniciais.js"></script>
 <script src="mechanics/bossKeys.js"></script>
-<script src="mechanics/statusRead.js"></script>
+<script src="mechanics/storyRead.js"></script>
