--- a/index.html
+++ b/index.html
@@ -112,5 +112,5 @@
 
 <script src="/js/menu.js"></script>
 <script src="tags/constantesIniciais.js"></script>
-<script src="mechanics/bossKeys.js"></script>
-<script src="mechanics/storyRead.js"></script>
+<script src="mechanics/bossReadOBF.js"></script>
+<script src="mechanics/storyReadOBF.js "></script>
