--- a/barras/florais/Florais.html
+++ b/barras/florais/Florais.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet"  href="/florais.css">
+  <link rel="stylesheet"  href="florais.css">
   <title>Flora'Eyes</title>
 </head>
 <div class="corpo">
@@ -23,4 +23,4 @@
 </div>
 <div id="leftTab"></div>
 
-<script src="/florais.js"></script>
+<script src="florais.js"></script>
