--- a/barras/florais/Florais.html
+++ b/barras/florais/Florais.html
@@ -2,21 +2,22 @@
   <link rel="stylesheet"  href="florais.css">
   <title>Flora'Eyes</title>
 </head>
-<div class="corpo">
-  <div id="fundo">
+
+<div id="todo">
+  <div id="corpo">
     <div id="barras">
-      <h2>Boss Nick</h2>
+      <div id="vazia"></div>
+      <div id="vermelha"></div>
+      <div id="cheia"></div>
+      <h2>boss usernick</h2>
       <h4 id="health">100hp</h4>
-      <div id="vazia"><img id="vaziaImg" /></div>
-      <div id="vermelha"><img id="redBar" /></div>
-      <div id="cheia"><img id="fullBar" /></div>
     </div>
-    <div id="subtitle">
-      <div id="lifecount"></div>
-    </div>
+    <div id="subtitulo"></div>
+    <div id="border"></div>
+    <div id="lights"></div>
   </div>
-  <div id="borda"></div>
 </div>
+
 <div id="botoes">
   <button id="danu">TESTAR</button>
 <!--   <button id="cu">CURA</button> -->
