--- a/live.html
+++ b/live.html
@@ -72,4 +72,4 @@
 
 <script src="https://novaordemmundial.github.io/machine/sounds/soundMachine.js"></script>
 
-<!-- <script src="https://novaordemmundial.github.io/machine/script/livePage.js"></script> -->
+<script src="https://novaordemmundial.github.io/machine/script/livePage.js"></script>
