--- a/live.html
+++ b/live.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/animations.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/PassAnimation.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/Responsive/sizesAdaptative.css">
+  <link rel="stylesheet" href="https://novaordemmundial.github.io/design/live/livePage.css">
   
   <title>Live</title>
   
