--- a/live.html
+++ b/live.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/PassAnimation.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/Responsive/sizesAdaptative.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/live/livePage.css">
-  
+  <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   <title>Live</title>
   
 </head>
