--- a/live/sorte.html
+++ b/live/sorte.html
@@ -1,7 +1,8 @@
 <head>
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/randomAnimations.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/live/design/fortuneWheel.css">
-	<title>Teste sua sorte</title>
+  <title>Teste sua sorte</title>
+  <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
 <body id="bodi">
