--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta property="og:description" content="Conheça Os Bosses Da Live" />
   <meta property="og:url" content="https://novaordemmundial.github.io">
   <title>Nova Ordem Mundial</title>
+  <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
