--- a/live/sorte.html
+++ b/live/sorte.html
@@ -1,8 +1,25 @@
 <head>
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/randomAnimations.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/live/design/fortuneWheel.css">
+  
   <title>Teste sua sorte</title>
   <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
+  
+  <meta property="og:title" content="Tente a Sorte">
+  <meta property="og:description" content="Um sistema de decisão aleatoria com lista personalizada.">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://novaordemmundial.github.io/live/sorte">
+  <meta property="og:image" content="https://i.imgur.com/gpAnbGj.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:site" content="Nova Ordem Mundial">
+  <meta name="twitter:title" content="Tente a Sorte">
+  <meta name="twitter:description" content="Um sistema de decisão aleatoria com lista personalizada.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:src" content="https://i.imgur.com/gpAnbGj.png">
+  <meta name="theme-color" content="#66FF66">
+  
 </head>
 
 <body id="bodi">
