--- a/live/sorte.html
+++ b/live/sorte.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Um sistema de decisão aleatoria com lista personalizada.">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://novaordemmundial.github.io/live/sorte">
-  <meta property="og:image" content="https://i.imgur.com/gpAnbGj.png">
+  <meta property="og:image" content="https://i.imgur.com/samFYOY.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="Tente a Sorte">
   <meta name="twitter:description" content="Um sistema de decisão aleatoria com lista personalizada.">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image:src" content="https://i.imgur.com/gpAnbGj.png">
+  <meta name="twitter:image:src" content="https://i.imgur.com/samFYOY.png">
   <meta name="theme-color" content="#66FF66">
   
 </head>
