--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 	
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="RockeyDoggy">
-  <meta name="keywords" content="RockeyDoggy, Boss, Twitch Boss System, Sistema De Chefes, Twitch, Lives, Mini Game, Boss">
-  <meta property='og:image' content='https://i.imgur.com/gEqn6od.png'/>
-  <meta property="og:title" content="Bosses" />
-  <meta property="og:site_name" content="Bosses da Live" />
-  <meta property="og:description" content="Conheça Os Bosses Da Live" />
-  <meta property="og:url" content="https://novaordemmundial.github.io">
+  <meta property="og:title" content="Nova Ordem Mundial">
+  <meta property="og:description" content="Todos os Chefes listados na Nova Ordem Mundial, esses são os bosses que mais ajudaram ou participaram do evento de Boss.">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://novaordemmundial.github.io/live/sorte">
+  <meta property="og:image" content="https://i.imgur.com/ngAeiJj.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:site" content="Nova Ordem Mundial">
+  <meta name="twitter:title" content="Bosses Listados em Nova Ordem Mundial">
+  <meta name="twitter:description" content="Todos os Chefes listados na Nova Ordem Mundial, esses são os bosses que mais ajudaram ou participaram do evento de Boss.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:src" content="https://i.imgur.com/ngAeiJj.png">
+  <meta name="theme-color" content="#555555">
+	
   <title>Nova Ordem Mundial</title>
   <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
