--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Nova Ordem Mundial">
   <meta property="og:description" content="Todos os Chefes listados na Nova Ordem Mundial, esses são os bosses que mais ajudaram ou participaram do evento de Boss.">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://novaordemmundial.github.io/live/sorte">
+  <meta property="og:url" content="https://novaordemmundial.github.io">
   <meta property="og:image" content="https://i.imgur.com/ngAeiJj.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
