--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="twitter:site" content="Nova Ordem Mundial">
-  <meta name="twitter:title" content="Bosses Listados em Nova Ordem Mundial">
+  <meta name="twitter:title" content="Bosses listados na Nova Ordem Mundial">
   <meta name="twitter:description" content="Todos os Chefes listados na Nova Ordem Mundial, esses são os bosses que mais ajudaram ou participaram do evento de Boss.">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:src" content="https://i.imgur.com/ngAeiJj.png">
