--- a/index.html
+++ b/index.html
@@ -282,3 +282,4 @@
 <script src="https://novaordemmundial.github.io/machine/script/bosses%20secrets/Fools/mechanics.js"></script>
 <!-- Others -->
 <script src="https://novaordemmundial.github.io/design/files/animationFunctions.js"></script>
+<script src="/machine/script/bossLinks.js"></script>
