--- a/index.html
+++ b/index.html
@@ -283,3 +283,4 @@
 <!-- Others -->
 <script src="https://novaordemmundial.github.io/design/files/animationFunctions.js"></script>
 <script src="/machine/script/bossLinks.js"></script>
+<script src="/non/draw/siteTest.js"></script>
