--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 <script src="/non/draw/siteTest.js"></script>
 <!-- TAGS -->
 <script src="https://novaordemmundial.github.io/machine/tags/allTags.js"></script>
-<script src="https://novaordemmundial.github.io/machine/tags/limitesDeForca.js"></script>
+<script src="/files/infos/generalData/maxStatus.js"></script>
 <script src="https://novaordemmundial.github.io/watchers/papam/deny.js"></script>
 <!-- NODES -->
 <script src="https://novaordemmundial.github.io/files/infos/bossesData/bossesInfos.js"></script>
