--- a/apps/Editor.html
+++ b/apps/Editor.html
@@ -6,7 +6,7 @@
   <title>Editor</title>
   <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   
-  <link rel="stylesheet" href="..\editor\editor.css">
+  <link rel="stylesheet" href="../editor/editor.css">
   
   <meta property="og:title" content="Editor (Projeto sem Nome)">
   <meta property="og:description" content="Aqui você pode criar textos, historias, roteiros ou livros.">
