--- a/apps/Editor.html
+++ b/apps/Editor.html
@@ -374,4 +374,4 @@
 </div>
 
 <script src="editor/editor.js"></script>
-<script src="https://rockeydoggy.github.io/Fools%20Project/Files/import/data.js"></script>
+<script src="editor/imp.js"></script>
