--- a/apps/Editor.html
+++ b/apps/Editor.html
@@ -5,7 +5,7 @@
   
   <link rel="stylesheet" href="https://rockeydoggy.github.io/cssfonts/animatedCss/editorAnimations.css">
   
-  <title>Editor</title>
+  <title>Editor de Historias</title>
   <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   
   <link rel="stylesheet" href="editor/editor.css">
@@ -405,5 +405,5 @@
 
 <script src="editor/tutoMode.js"></script>
 <script src="editor/welcome.js"></script>
-<script src="editor/yourDataBase.js"></script>
+<script src="editor/imp.js"></script>
 <script src="editor/editor.js"></script>
