--- a/index.html
+++ b/index.html
@@ -283,3 +283,6 @@
 <!-- Others -->
 <script src="https://novaordemmundial.github.io/design/files/animationFunctions.js"></script>
 <script src="/machine/script/bossLinks.js"></script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5345874121250926"
+     crossorigin="anonymous"></script>
