--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
     <div id="menuMaps">
       <div id="leftMenuButtons">
-        <ul id="liveBtn" class="activBtn mButton" tabindex="1">LIVE</ul>
+        <ul id="liveBtn" class="activBtn mButton" tabindex="1">APPS</ul>
         <!--<ul id="scorBtn" class="deactBtn" tabindex="2">SCORE</ul>-->
         <ul id="custBtn" class="activBtn mButton" tabindex="3">CUSTOMIZAÇÃO</ul>
         <ul id="passBtn" class="activBtn mButton" tabindex="4">PASSWORD</ul>
