--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="apps/apps.css">
+  <link rel="stylesheet" href="apps/apps/apps.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/root/fontsStyles.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/root/defaultsDesign.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/themes/purerDesign.css">
@@ -66,5 +66,5 @@
 <script src="https://novaordemmundial.github.io/machine/script/inicial.js"></script>
 
 <script src="https://novaordemmundial.github.io/machine/sounds/soundMachine.js"></script>
-<script src="apps/apps.js">
 <!-- <script src="https://novaordemmundial.github.io/machine/script/livePage.js"></script> -->
+<script src="apps/apps/apps.js">
