--- a/apps.html
+++ b/apps.html
@@ -56,7 +56,6 @@
   
 </body>
 
-<script src="apps/apps/apps.js">
 <!-- TAGS -->
 <script src="https://novaordemmundial.github.io/machine/tags/allTags.js"></script>
 <!-- NODES -->
@@ -68,3 +67,5 @@
 
 <script src="https://novaordemmundial.github.io/machine/sounds/soundMachine.js"></script>
 <!-- <script src="https://novaordemmundial.github.io/machine/script/livePage.js"></script> -->
+
+<script src="apps/apps/apps.js"></script>
