--- a/apps.html
+++ b/apps.html
@@ -47,7 +47,7 @@
   </div>
   
   <div id="corpo2">
-    <div id="adBanner"></div>
+    <div id="liveIs"></div>
     <div id="contentGuide">
 <!--       <h1>Conteudos Para Lives</h1> -->
     </div>
