--- a/apps.html
+++ b/apps.html
@@ -7,9 +7,21 @@
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/PassAnimation.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/Responsive/sizesAdaptative.css">
   
-	<title>Apps da Live</title>
+	<title>Aplicativos NOM</title>
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   
+  
+  <meta property="og:title" content="Aplicativos NOM">
+  <meta property="og:description" content="Alguns aplicativos uteis para o dia a dia ou lives, grande maioria sem AD">
+  <meta name="twitter:image:src" content="https://i.imgur.com/GVAomjb.png">
+  <meta property="og:image:type" content="image/png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:description" content="Alguns aplicativos uteis para o dia a dia ou lives, grande maioria sem AD">
+  <meta name="twitter:site" content="Aplicativos NOM">
+  <meta property="og:image:width" content="480">
+  <meta property="og:image:height" content="480">
+  <meta name="theme-color" content="#6620EE">
+	
 </head>
 
 <!--      //   Menu De Seleção   //       -->
