--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/files/PassAnimation.css">
   <link rel="stylesheet" href="https://novaordemmundial.github.io/design/Responsive/sizesAdaptative.css">
   
-	<title>Aplicativos NOM</title>
+	<title>Aplicativos Simples</title>
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   
   
