--- a/apps/lista.html
+++ b/apps/lista.html
@@ -13,7 +13,7 @@
   <meta name="twitter:site" content="Sua Lista De Compras">
   <meta property="og:image:width" content="480">
   <meta property="og:image:height" content="480">
-  <meta name="theme-color" content="#222233">
+  <meta name="theme-color" content="#eeeecc">
 </head>
 
 <div id="principal">
