--- a/apps/lista.html
+++ b/apps/lista.html
@@ -6,13 +6,13 @@
   
   <meta property="og:title" content="Sua Lista De Compras">
   <meta property="og:description" content="Um Lugar Particular Para Você Criar Suas Listas De Compras">
-  <meta name="twitter:image:src" content="https://i.imgur.com/l5p9p74.png">
+  <meta name="twitter:image:src" content="https://i.imgur.com/GCElI7j.png">
   <meta property="og:image:type" content="image/png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:description" content="Um Lugar Particular Para Você Criar Suas Listas De Compras">
   <meta name="twitter:site" content="Sua Lista De Compras">
-  <meta property="og:image:width" content="480">
-  <meta property="og:image:height" content="480">
+  <meta property="og:image:width" content="954">
+  <meta property="og:image:height" content="640">
   <meta name="theme-color" content="#eeeecc">
 </head>
 
