--- a/apps.html
+++ b/apps.html
@@ -11,13 +11,13 @@
 	<link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
   
   
-  <meta property="og:title" content="Aplicativos NOM">
+  <meta property="og:title" content="NOM (Aplicativos)">
   <meta property="og:description" content="Alguns aplicativos uteis para o dia a dia ou lives, grande maioria sem AD">
   <meta name="twitter:image:src" content="https://i.imgur.com/thv777g.png">
   <meta property="og:image:type" content="image/png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:description" content="Alguns aplicativos uteis para o dia a dia ou lives, grande maioria sem AD">
-  <meta name="twitter:site" content="Aplicativos NOM">
+  <meta name="twitter:site" content="NOM (Aplicativos)">
   <meta property="og:image:width" content="954">
   <meta property="og:image:height" content="640">
   <meta name="theme-color" content="#5511EE">
