--- a/apps/mods.html
+++ b/apps/mods.html
@@ -4,6 +4,8 @@
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="mods/css-js/tramission.js"></script>
   <link rel="stylesheet" href="mods/css-js/page.css">
+  <title>Lista de Mods (Modpack Elden Ring)</title>
+  <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
 
