--- a/apps/mods.html
+++ b/apps/mods.html
@@ -1,10 +1,10 @@
-﻿<head>
+<head>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="mods/css-js/tramission.js"></script>
   <link rel="stylesheet" href="mods/css-js/page.css">
-  <title>Lista de Mods (Modpack Elden Ring)</title>
+  <title>Live Modpack</title>
   <link rel="icon" href="https://i.imgur.com/pv8rDm5.png" type="image/png" sizes="16x16">
 </head>
 
@@ -13,9 +13,9 @@
 <div id="TopPanel"></div>
 
 <div id="RightPanel">
-  <h1>Elden Ring Mod Pack</h1>
+  <h1>???????????</h1>
   <div id="videoYoutube">
-    <iframe id="xDDD" src="https://www.youtube.com/embed/KEtF4zhKLiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    <iframe id="xDDD" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe>
   </div>
   
@@ -33,7 +33,7 @@
   
   <div id="Content"></div>
   
-  <h4>REQUIRIDOS</h4>
+  <h4>REQUISITOS</h4>
     
   <div id="RemovedMods"></div>
   
