--- a/apps/mods.html
+++ b/apps/mods.html
@@ -55,4 +55,10 @@
   <p></p>
 </div>
 
+<div id="modpackStats">
+	<p>Mods</p>
+	<p>Requisitos</p>
+	<p>Total</p>
+</div>
+
 <script src="mods/css-js/page.js"></script>
