--- a/apps/listas.html
+++ b/apps/listas.html
@@ -6,6 +6,9 @@
     <title>Lista De Compras</title>
     <link rel="stylesheet" href="list-sources/defaults.css">
     <link rel="stylesheet" href="list-sources/responsive.css">
+    <script src='https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js'></script>
+    <script src='https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js'></script>
+    <script src="list-sources/import.js"></script>
     <script src="list-sources/auxi.js"></script>
 </head>
 
